<resources>
    <string name="app_name">Insulin Application</string>
    <string name="user_data">Введіть дані пацієнта</string>
    <string name="height_label">Зріст (см)</string>
    <string name="weight_label">Вага (кг)</string>
    <string name="age_label">Вік</string>
    <string name="calculate_dose">Записати дозу в базу даних</string>
    <string name="radio1">Вперше виявленний цукровий діабет</string>
    <string name="radio2">Більше року(добра компресія)</string>
    <string name="radio3">Більше року (нестійка компресія)</string>
    <string name="radio4">Декомпенсація</string>
    <string name="radio5">Кетоацидоз</string>
    <string name="radio6">3й триместр вагітності.</string>
    <string name="new_page">Календар</string>
    <string name="add_meal">Додати прийом їжі</string>
    <string name="add_glucose">Додати показник глюкози</string>
    <string name="diary_meal">Щоденник прийомів їжі</string>
    <string name="diary_insulin">Щоденник дозування інсуліну</string>
    <string name="add_insulin">Додати дозування інсуліном</string>
    <string name="glucose_graph">Графік рівня глюкози</string>
</resources>